# store

./: Dockerfile  README.md  build.sh  manage.py  pyproject.toml  run.sh  tasks.py
products/: __init__.py  admin.py  models.py  tests.py  urls.py  views.py
products/migrations/: 0002_alter_task_task.py  0003_alter_task_notification_interval.py  0004_rename_telegram_nick_task_email.py
products/static/: styles.css
products/templates/: base.html
products/templates/products/: home.html  product_confirm_delete.html  product_create.html  product_detail.html  product_form.html  product_list.html
store/: __init__.py  celery_app.py  settings.py  urls.py
